Support `String::isBlank` in `PreferSpecificApiCheck`